--- a/components/Card/card.module.css
+++ b/components/Card/card.module.css
@@ -1,11 +1,13 @@
 .card {
   display: flex;
   flex-direction: column;
-  height: 350px;
-  background-color: #e5e5e5;
+  height: 300px;
+  background-color: white;
   border-radius: 20px;
   cursor: pointer;
   transition: 0.2s;
+  width: 200px;
+  /* max-width: 250px; */
 }
 
 @media (max-width: 600px) {
@@ -20,11 +22,12 @@
 
 .img {
   flex: 2;
-  padding: 5px;
+  /* padding: 5px; */
   border-radius: 20px 20px 0 0;
   color: black;
-  width: auto;
-  max-height: 250px;
+  max-width: 100%;
+  max-height: 125px;
+  align-self: center;
 }
 
 .bottom {
@@ -37,4 +40,6 @@
 .title {
   padding: 20px;
   font-weight: 600;
+  font-size: 0.8rem;
+  word-break: break-all;
 }
