--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 2% 5% 0 5%;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 960px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: 50px;
 }
 
 .cardlist {
