--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-right: auto;
   margin-left: auto;
-  max-width: 960px;
+  max-width: 1200px;
   padding-right: 20px;
   padding-left: 20px;
   margin-top: 50px;
@@ -13,8 +13,11 @@
   display: flex;
   gap: 15px;
   overflow-x: auto;
+  height: 400px;
 }
 
-.topics {
-  margin-bottom: 50px;
+@media (max-width: 600px) {
+  .cardlist {
+    margin-bottom: 0;
+  }
 }
